fix(table): mobile style wrap & cell gap

--- a/packages/table/src/table.pcss
+++ b/packages/table/src/table.pcss
@@ -50,6 +50,8 @@
 
   &__header,
   &__cell {
+    flex-wrap: wrap;
+    gap: calc(var(--table-padding-cell) * 2);
     padding: var(--table-padding-cell);
   }
 
